--- a/css/mobile.css
+++ b/css/mobile.css
@@ -31,6 +31,11 @@
   border-color: transparent;
   transition: var(--transition);
 }
+
+body.dark .nav-toggle {
+  color: var(--light-color);
+}
+
 .nav-toggle:hover {
   color: var(--primary-color);
   transform: rotate(90deg);
