--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@
   --primary-color: #c72727;
   --secondary-color: #f99500;
   --light-color: #f3f3f3;
-  --dark-color: #333;
+  --dark-color: #0f1a20;
   --max-width: 1100px;
   --transition: all 0.3s linear;
   --spacing: 0.25rem;
@@ -231,6 +231,79 @@ p {
   display: none;
 }
 
+/* Dark Theme */
+body.dark {
+  background: #292c35;
+}
+
+body.dark #main-nav {
+  background-color: var(--dark-color);
+}
+
+body.dark .links a {
+  color: var(--light-color);
+}
+
+body.dark #home-articles h3 {
+  color: var(--light-color);
+}
+
+body.dark .label {
+  background-color: var(--light-color);
+}
+
+body.dark .ball {
+  background-color: var(--dark-color);
+}
+
+.label {
+  background-color: var(--dark-color);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 26px;
+  width: 50px;
+  padding: 5px;
+  border-radius: 50px;
+  cursor: pointer;
+  position: relative;
+  transition: all 0.2s linear;
+}
+
+.checkbox {
+  position: absolute;
+  opacity: 0;
+}
+
+.ball {
+  background-color: #fff;
+  width: 22px;
+  height: 22px;
+  border-radius: 50%;
+  position: absolute;
+  top: 2px;
+  left: 2px;
+  transition: all 0.2s linear;
+}
+
+.ball.roll {
+  transform: translateX(24px);
+}
+
+.fa-moon {
+  color: #f1c40f;
+}
+
+.fa-sun {
+  color: #f39c12;
+}
+
+@media (min-width: 768px) {
+  .label {
+    margin-left: 4rem;
+  }
+}
+
 /* Showcase */
 #showcase {
   background: var(--dark-color);
@@ -317,8 +390,22 @@ p {
   grid-row: 1 / span 3;
 }
 
+body.dark .page-container .page-content {
+  background-color: #57646d;
+  color: #fff;
+}
+
 .page-container .aside {
   padding: 1rem 0.8rem;
+}
+
+body.dark .page-container .aside {
+  background-color: #57646d;
+  color: #fff;
+}
+
+body.dark .page-container .aside .list a {
+  color: #fff;
 }
 
 .meta {
@@ -327,6 +414,10 @@ p {
   justify-content: space-between;
   background: var(--light-color);
   padding: 0.5rem;
+}
+
+body.dark .meta {
+  background: #4e5962;
 }
 
 .meta .category {
